--- a/Money/src/app/app.component.html
+++ b/Money/src/app/app.component.html
@@ -1,3 +1,4 @@
 <router-outlet></router-outlet>
+<app-dashboard></app-dashboard>
 <app-transactions></app-transactions>
 <app-categories></app-categories>
