--- a/Money/src/app/app.component.html
+++ b/Money/src/app/app.component.html
@@ -14,7 +14,7 @@
 		</mat-nav-list>
 	</mat-sidenav>
 
-	<mat-sidenav-content>
+	<mat-sidenav-content class="content">
 		<router-outlet></router-outlet>
 	</mat-sidenav-content>
 </mat-sidenav-container>
