--- a/Money/src/app/transactions/transactions.component.html
+++ b/Money/src/app/transactions/transactions.component.html
@@ -1,3 +1,6 @@
+<h1>Transactions</h1>
+
+<h2>Import transaction</h2>
 <input type="file" class="file-input"
        (change)="onFileSelected($event)" #fileUpload>
 
@@ -6,11 +9,11 @@
    {{fileName || "No file uploaded yet."}}
 
     <button (click)="fileUpload.click()">
+      Import
     </button>
 </div>
 
-<h1>Transactions</h1>
-
+<h2>Last transaction</h2>
 <table>
   <tr>
     <th>Date</th>
