--- a/Money/src/app/app.component.html
+++ b/Money/src/app/app.component.html
@@ -3,13 +3,20 @@
 		<mat-icon>menu</mat-icon>
 	</button>
 	<span>{{ title }}</span>
+	<span class="toolbar-item-spacer"></span>
+	<!-- <button mat-icon-button matTooltip="My Account" [matMenuTriggerFor]="userAccountMenu">
+		<mat-icon>account_circle</mat-icon>
+	</button> -->
 </mat-toolbar>
 
-<mat-sidenav-container class="container">
-	<mat-sidenav #sidenav mode="side" opened="" class="sidenav">
+<mat-sidenav-container class="container" autosize>
+	<mat-sidenav #sidenav mode="side" opened="true" class="sidenav">
 		<mat-nav-list>
+			<!-- <mat-icon fontIcon="dashboard"></mat-icon> -->
 			<a mat-list-item routerLink="/">Dashboard</a>
+			<!-- <mat-icon fontIcon="store"></mat-icon> -->
 			<a mat-list-item routerLink="/Categories">Categories</a>
+			<!-- <mat-icon fontIcon="payments"></mat-icon> -->
 			<a mat-list-item routerLink="/Transactions">Transactions</a>
 		</mat-nav-list>
 	</mat-sidenav>
