Create budget on categories

--- a/Money/src/app/app.component.html
+++ b/Money/src/app/app.component.html
@@ -15,7 +15,7 @@
 			<!-- <mat-icon fontIcon="dashboard"></mat-icon> -->
 			<a mat-list-item routerLink="/">Dashboard</a>
 			<!-- <mat-icon fontIcon="store"></mat-icon> -->
-			<a mat-list-item routerLink="/Categories">Categories</a>
+			<a mat-list-item routerLink="/Categories">Categories & Budgets</a>
 			<!-- <mat-icon fontIcon="payments"></mat-icon> -->
 			<a mat-list-item routerLink="/Transactions">Transactions</a>
 		</mat-nav-list>
